--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
         "skipLibCheck": true,
         "resolveJsonModule": true,
         "esModuleInterop": true,
-        "experimentalDecorators": true // <- add this
+        "experimentalDecorators": true
     }
 }
