--- a/package.json
+++ b/package.json
@@ -29,12 +29,18 @@
         "random-web-token": "^2.2.1",
         "reflect-metadata": "^0.1.13",
         "supervisor": "^0.12.0",
-        "typescript": "^4.8.4"
+        "swagger-jsdoc": "5.0.1",
+        "swagger-ui-express": "^4.6.0",
+        "typescript": "^4.8.4",
+        "yamljs": "^0.3.0"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
         "@types/check-types": "^7.3.4",
         "@types/express": "^4.17.14",
-        "@types/random-web-token": "^2.0.0"
+        "@types/random-web-token": "^2.0.0",
+        "@types/swagger-jsdoc": "^6.0.1",
+        "@types/swagger-ui-express": "^4.1.3",
+        "@types/yamljs": "^0.2.31"
     }
 }
