--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "check-types": "^11.1.2",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.2",
+        "cors": "^2.8.5",
         "crypto-random-string": "^5.0.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.1",
@@ -37,6 +38,7 @@
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
         "@types/check-types": "^7.3.4",
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.14",
         "@types/random-web-token": "^2.0.0",
         "@types/swagger-jsdoc": "^6.0.1",
